feat: ui update

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,43 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base{
-    html{
-        font-family: "Poppins", "sans-serif";
+    *{
+        @apply box-border p-0 m-0 scroll-smooth;
     }
 
     body{
-        background-color: rgb(253, 254, 255);
-        overflow-x: hidden;
+        @apply bg-gray-950 text-gray-50 overflow-x-hidden font-inter;
     }
 }
 
 @layer components{   
-    .input-box{
-        @apply w-full text-sm bg-transparent border-[1.5px] px-5 py-3 rounded mb-4 outline-none;
-    }
-
     .btn-primary{
-        @apply w-full text-sm bg-primary text-white p-2 rounded my-1 hover:bg-blue-600;
-    }
-
-    .google-btn{
-        @apply w-full text-sm bg-slate-700 text-white p-2 rounded my-1 hover:bg-slate-800;
+        @apply w-full text-sm bg-blue-600 text-white p-2 rounded my-1 hover:bg-blue-500;
     }
 
     .icon-btn{
-        @apply text-xl text-slate-300 cursor-pointer hover:text-primary;
+        @apply text-xl text-slate-300 cursor-pointer hover:text-blue-600;
     }
-
-    .input-label{
-        @apply text-xs text-slate-400;
-    }
-
-    .input-label-focus{
-        @apply  focus:border-blue-500 focus:ring focus:ring-blue-200 transition duration-200;
-    }
-   
 }
